--- a/ZooloskiVrt.Klijent.Forme/Properties/Resources.resx
+++ b/ZooloskiVrt.Klijent.Forme/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="zooo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\zooo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="122" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\122.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
